--- a/readMe/0.ReactNativeSetUp.md
+++ b/readMe/0.ReactNativeSetUp.md
@@ -33,8 +33,9 @@
 - to add api yarn add pokemon axios
 - 
   
-## Using cr
+## Using CLI
 - react-native init [PROJECT-NAME]
+-  react-native init MyApp --package=com.organization.project.app
 - cd [PROJECT-NAME]
 - react-native run-android
 - react-native run-ios
