Read me file updated

--- a/readMe/0.ReactNativeSetUp.md
+++ b/readMe/0.ReactNativeSetUp.md
@@ -40,7 +40,7 @@
 - to add api yarn add pokemon axios
 -
 
-## Using cr
+## Using cl
 
 - react-native init [PROJECT-NAME]
 - cd [PROJECT-NAME]
@@ -51,3 +51,10 @@
 - react-native link [LIBRARY-NAME] ( Link dependencies to native projects )
 - watchman watch-del-all (If something don’t run as expected, maybe you need to clear and create a new bundle with this command.)
 -
+
+## React Native Project using TypeScript
+
+- Add to existing project
+  - npm install -D @tsconfig/react-native @types/jest @types/react @types/react-test-renderer typescript
+- Create new project with Typescript
+  - npx react-native init YourProjectName --template react-native-template-typescript
