updated read me file and added basic project

--- a/readMe/0.ReactNativeSetUp.md
+++ b/readMe/0.ReactNativeSetUp.md
@@ -42,15 +42,40 @@
 
 ## Using cl
 
-- react-native init [PROJECT-NAME]
+- npx react-native init [PROJECT-NAME]
+- react-native init [PROJECT-NAME] --package=com.organization.project.app
 - cd [PROJECT-NAME]
-- react-native run-android
-- react-native run-ios
-- react-native build-android
-- react-native build-ios
-- react-native link [LIBRARY-NAME] ( Link dependencies to native projects )
+- npx react-native run-android
+- npx react-native run-ios
+- npx react-native build-android
+- npx react-native build-ios
+- npx react-native link [LIBRARY-NAME] ( Link dependencies to native projects )
 - watchman watch-del-all (If something don’t run as expected, maybe you need to clear and create a new bundle with this command.)
--
+- To Start Metro - npm start
+- To Run in IOS - npm run ios
+
+## Integration with Existing App [Click here](https://reactnative.dev/docs/integration-with-existing-apps)
+
+- Set up directory structure
+  - To ensure a smooth experience, create a new folder for your integrated React Native project, then copy your existing Android project to an /android subfolder.
+- Install JavaScript dependencies
+- Go to the root directory for your project and create a new package.json file with the following contents:
+
+```
+{
+  "name": "MyReactNativeApp",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "react-native start"
+  }
+}
+```
+
+- Next, install the react and react-native packages. Open a terminal or command prompt, then navigate to the directory with your package.json file and run:
+- npm install react-native
+- npm install react@version_printed_above
+- Adding React Native to your app
 
 ## React Native Project using TypeScript
 
@@ -58,3 +83,32 @@
   - npm install -D @tsconfig/react-native @types/jest @types/react @types/react-test-renderer typescript
 - Create new project with Typescript
   - npx react-native init YourProjectName --template react-native-template-typescript
+
+# [Running On Device](https://reactnative.dev/docs/running-on-device)
+
+# Android
+
+```
+export ANDROID_HOME=$HOME/Library/Android/sdk
+export PATH=$PATH:$ANDROID_HOME/emulator
+export PATH=$PATH:$ANDROID_HOME/platform-tools
+export JAVA_HOME=<Your Android Studio path here>/jre
+```
+
+- npx react-native run-android
+
+## Error
+
+```
+/Users/sibaprasad/.zprofile:3: /Library/Java/JavaVirtualMachines/jdk1.8.0_77.jdk/Contents/Home not found
+/Users/sibaprasad/.zshrc:3: /Library/Java/JavaVirtualMachines/jdk1.8.0_77.jdk/Contents/Home not found
+sibaprasad@sibaprasads-MBP ~ % /Users/sibaprasad/Workspace/ReactNative/ReactNativePlayground/project/HelloRn/node_modules/.bin/launchPackager.command ; exit;
+```
+
+## java.util.concurrent.ExecutionException: com.android.builder.testing.api.DeviceException: com.android.ddmlib.InstallException: EOF
+
+- Solution
+
+```
+
+```
