--- a/readMe/4.Components.md
+++ b/readMe/4.Components.md
@@ -1,7 +1,9 @@
 # Component
 
+- [Components](https://reactnative.dev/docs/0.71/intro-react-native-components)
 
 ## Hooks
+
 - Hooks are great for stateful logic and code organization. Now we have several hooks for common use cases:
 - [useNavigation](https://reactnavigation.org/docs/use-navigation/)
 - [useRoute](https://reactnavigation.org/docs/use-route/)
@@ -9,3 +11,72 @@
 - [useFocusEffect](https://reactnavigation.org/docs/use-focus-effect/)
 - [useIsFocused](https://reactnavigation.org/docs/use-is-focused/)
 - [useScrollToTop](https://reactnavigation.org/docs/use-scroll-to-top/)
+
+## Component life cycle
+
+- All React class components have their own phases. When an instance of a component is being created and inserted into the DOM, it gets properties, orprops, and from now on they can be accessed using this.props.
+- Then the whole lifecycle ‘thing’ begins.
+- Note: A React component may NOT go through all of the phases. The component could get mounted and unmounted the next minute — without any updates or error handling.
+- A component’s lifecycle can be divided into 4 parts:
+- **Mounting** —  an instance of a component is being created and inserted into the DOM.
+- **Updating** — when the React component is born in the browser and grows by receiving new updates.
+- **Unmounting** — the component is not needed and gets unmounted.
+- **Error handling** — called when there is an error during rendering, in a lifecycle method, or in the constructor of any child component.
+
+## Lifecycle Phases
+
+- As I have introduced the basic idea of each phase, let’s take a closer look at their methods.
+
+## Mounting
+
+- These methods are called in the following order when an instance of a component is being created and inserted into the DOM:
+- **constructor()**
+- **static getDerivedStateFromProps()**
+- **render()**
+- **componentDidMount()**
+
+## Updating
+
+- An update can be caused by changes to props or state. These methods are called in the following order when a component is re-rendered:
+- **static getDerivedStateFromProps()**
+- **shouldComponentUpdate()**
+- **render()**
+- **getSnapshotBeforeUpdate()**
+- **componentDidUpdate()**
+
+## Unmounting
+
+- This method is called when a component is removed from the DOM:
+- **componentWillUnmount()**
+
+## Error Handling
+
+- These methods are called when there is an error during rendering, in a lifecycle method, or in the constructor of any child component.
+- **static getDerivedStateFromError()**
+- **componentDidCatch()**
+- Now that we know what are the lifecycle phases and their methods, we can get down to the next part — a detailed description of each method.
+
+# Detailed Lifecycle
+
+## Mounting
+
+## Constructor()
+
+- First of all, the constructor method is called before mounting to the DOM and rendering.
+- Usually, you’d initialize state and bind event handler methods within the constructor method.
+- This is the first part of the lifecycle and is only called when it is explicitly declared, so there is no need to declare it in every component you create.
+- If you need to make any side-effects or subscriptions in this method, you should use componentDidMount().
+- I will introduce it later on as we are going through each method the in order they are invoked.
+
+```
+constructor(props){
+    super(props);
+    this.state = {
+      message: 'hello world',
+    } // this is our initial data
+  }
+```
+
+# [More Details](https://www.netguru.com/blog/react-native-lifecycle)
+
+# [More Details](https://www.netguru.com/blog/react-native-lifecycle)
