Read me file updated

--- a/readMe/3.debuggingReactNativeApps.md
+++ b/readMe/3.debuggingReactNativeApps.md
@@ -1,1 +1,33 @@
 # Debugging React Native Apps
+[Debugg] (https://medium.com/simform-engineering/different-ways-to-debug-react-native-application-a636ebb4be78)
+1. Consoles
+2. Inspect Elements
+3. Debugging using VS Code
+4. Reactotron
+5. React Native Debugger
+6. Flipper
+
+## Console
+- So far, the most convenient way to troubleshoot an issue is to backtrace data utilizing consoles throughout the execution cycle. 
+- This is one of the most effective options if your problem involves some modest data manipulation and you are unsure of how a certain operation will turn out.
+```
+console.log   ('Prints .toString() representation of Value') 
+console.warn  ('Prints values as yellow warning') ⚠️
+console.error ('Prints values as red error') 🛑
+console.table ('Prints values based on index')
+console.dir   ('Displays interactive list of the properties')
+```
+## 2. Inspect Elements
+- Inspect Elements can be triggered using the developer menu on Android and iOS, and it can be considered a go-to option to debug UI elements.
+- **Inspect:** It provides a selection-based tool that displays the props and style objects applied to the selected element. You can look at the dimensions, CSS, margin, padding, font size, font family, etc.
+- Network: It provides you with the network call details like type, method, URL, requestHeaders, responseContentType, responseSize, responseHeaders, status, timeout, response, responseURL, etc.
+## 3. Debugging using VS Code
+- VS Code inherently doesn’t support debugging in React Native.
+- Just go to the Extensions tab and install “React Native Tools”. In the Run & Debug Tab, select “Create a launch.json file”. 
+- Then, add configuration for your Android and iOS apps, and you’re good to go.
+
+## 4. Reactotron
+
+## 5. React Native Debugger
+
+## 6. Flipper
