Read me file updated

--- a/readMe/1.ReactNativeSetUp.md
+++ b/readMe/1.ReactNativeSetUp.md
@@ -116,7 +116,7 @@ sibaprasad@sibaprasads-MBP ~ % /Users/sibaprasad/Workspace/ReactNative/ReactNati
 
 
 ## What is react Native
-- ![alt text](https://github.com/siba-x-prasad/ReactNativePlayground/blob/main/UdemyTutorial/ReadMe/images/WhatIsRn.png)
+<img src="https://github.com/siba-x-prasad/ReactNativePlayground/blob/main/readMe/images/WhatIsRn.png" width="700" height="400"/>  
 
 ## How React Native works
 - <img src="https://github.com/siba-x-prasad/ReactNativePlayground/blob/main/readMe/images/HowRNWorks.png" width="700" height="400"/> 
