--- a/readMe/2.Basics.md
+++ b/readMe/2.Basics.md
@@ -17,8 +17,7 @@
 
 ## React Alternatives
 
-- Flutter being the most popular alternative to React Native.
-- Flutter
+- Flutter -> Being the most popular alternative to React Native.
 - Ionic
 - Xamarin
 
