--- a/readMe/3.debuggingReactNativeApps.md
+++ b/readMe/3.debuggingReactNativeApps.md
@@ -27,7 +27,15 @@ console.dir   ('Displays interactive list of the properties')
 - Then, add configuration for your Android and iOS apps, and you’re good to go.
 
 ## 4. Reactotron
-
+- Reactotron: The name may sound like Optimus Prime’s teammate in the film Transformers, but it is a React Native debugging tool.
+- It is neither a Chrome debugger replacement nor a debugging tool, but it does provide you with information about what is going on in your application.
+- It can detect the error and show you the visual steps that led to it.
+- It is one of the most effective tools for tracking API calls and responses.
+- When your app interacts with an API, you can get a complete visual representation of the Response, Response Headers, Request Params, and Requested Headers.
 ## 5. React Native Debugger
+- The React Native Debugger is arguably the best debugger to use if your React Native project uses Redux.
+- It combines Redux’s DevTools and React’s Developer Tools into a single app, eliminating the need to work with two distinct apps for debugging.
 
 ## 6. Flipper
+- It is an open-source debugging tool developed by Facebook to debug iOS and Android React Native apps.
+- It was introduced with default integration with the launch of React Native 0.62 and has evolved over time and is now a trusted, stable React Native Debugging Tool.
