Updated read me file

--- a/readMe/10.httpRequest.md
+++ b/readMe/10.httpRequest.md
@@ -1,1 +1,3 @@
 # Http Request Adding A web server and Database
+
+- [Official React Native Network Request](https://reactnative.dev/docs/network?language=typescript)
