--- a/readMe/14.pushNotification.md
+++ b/readMe/14.pushNotification.md
@@ -1,1 +1,4 @@
 # Push Notification
+
+- [Android Push Notification](https://medium.com/@dirussogaetano/push-notifications-react-native-3ebdfa33fe49)
+- [push Notification](https://medium.com/@varunkukade999/part-1-push-notifications-in-react-native-2024-db5f7200288f)
