--- a/readMe/6.stateManagementAndRedux.md
+++ b/readMe/6.stateManagementAndRedux.md
@@ -1,1 +1,126 @@
 # State Management And Redux
+
+- There are two types of data that control a component:
+- props : props are set by the parent and they are fixed throughout the lifetime of a component.
+- state : For data that is going to change, we have to use state.
+
+## useState
+
+- React Native provides a built-in way to manage state using the useState hook for functional components and this.setState for class components.
+- This method is ideal for simple state management within individual components.
+
+```
+import React, { useState } from 'react';
+import { View, Text, Button } from 'react-native';
+
+const CounterApp = () => {
+  const [count, setCount] = useState(0);
+
+  return (
+    <View>
+      <Text>{count}</Text>
+      <Button title="Increment" onPress={() => setCount(count + 1)} />
+    </View>
+  );
+};
+
+export default CounterApp;
+```
+
+## useContext
+
+- For managing state across multiple components, React Native offers the Context API.
+- It allows you to share state without passing props down manually through every level of the component tree.
+
+```
+import React, { createContext, useState, useContext } from 'react';
+import { View, Text, Button } from 'react-native';
+
+const CountContext = createContext();
+
+const CountProvider = ({ children }) => {
+  const [count, setCount] = useState(0);
+  return (
+    <CountContext.Provider value={{ count, setCount }}>
+      {children}
+    </CountContext.Provider>
+  );
+};
+
+const Counter = () => {
+  const { count, setCount } = useContext(CountContext);
+  return (
+    <View>
+      <Text>{count}</Text>
+      <Button title="Increment" onPress={() => setCount(count + 1)} />
+    </View>
+  );
+};
+
+const App = () => (
+  <CountProvider>
+    <Counter />
+  </CountProvider>
+);
+
+export default App;
+```
+
+## Redux
+
+- Redux is a popular library for managing state in React and React Native applications.
+- It provides a predictable state container and ensures that state changes are traceable and manageable.
+- Redux is ideal for larger applications with complex state logic.
+- Install Redux and React-Redux:
+
+```
+npm install redux react-redux
+```
+
+- Create a Redux Store:
+
+```
+import { createStore } from 'redux';
+
+const initialState = { count: 0 };
+
+const reducer = (state = initialState, action) => {
+  switch (action.type) {
+    case 'INCREMENT':
+      return { ...state, count: state.count + 1 };
+    default:
+      return state;
+  }
+};
+
+const store = createStore(reducer);
+```
+
+- Create React Components and Connect to Redux:
+
+```
+import React from 'react';
+import { Provider, useDispatch, useSelector } from 'react-redux';
+import { View, Text, Button } from 'react-native';
+import store from './store'; // Import your store
+
+const Counter = () => {
+  const count = useSelector((state) => state.count);
+  const dispatch = useDispatch();
+
+  return (
+    <View>
+      <Text>{count}</Text>
+      <Button title="Increment" onPress={() => dispatch({ type: 'INCREMENT' })} />
+    </View>
+  );
+};
+
+const App = () => (
+  <Provider store={store}>
+    <Counter />
+  </Provider>
+);
+
+export default App;
+```
