--- a/readMe/7.navigation.md
+++ b/readMe/7.navigation.md
@@ -1,6 +1,7 @@
 # Navigation
 
 - https://reactnavigation.org/docs/hello-react-navigation/
+- [Official React Native Navigation](https://reactnative.dev/docs/navigation)
 - Installing Navigation Package
 - npm install @react-navigation/native
 
