Added React Interview Questions

--- a/readMe/1.ReactNativeSetUp.md
+++ b/readMe/1.ReactNativeSetUp.md
@@ -54,6 +54,38 @@
 - To Start Metro - npm start
 - To Run in IOS - npm run ios
 
+# React Native Set up from scrach
+- There are 2 ways you can set up react native app for mobile
+- 1. Using react native cli
+- 2. Using react native expo
+
+## Basic commands for React Native
+- Install Jaja 1.8
+- Set up java home if you are using Windows laptop
+- Install Python 2
+- Install Android Studio (For React Native android)
+- Install Xcode (For React Native IOS)
+
+## React Native Commands
+- npm install -g react-native-cli
+- react-native init DemoProject (You can name your project as anything)
+- npx react-native init AwesomeProject
+- react-native run-android (To run in android device)
+- react-native run-ios (To run in ios Device)
+- npx react-native run-ios
+
+
+## Web Setup
+- npm install react-dom react-native-web
+- npm install react-dom react-native-web --legacy-peer-deps
+- npm install --save-dev babel-plugin-react-native-web (Babel Plugin for build time optimization)
+- npm install --save-dev babel-plugin-module-resolver  (Babel Module Aliasing)
+
+## Metro
+- Metro is a JavaScript bundler which takes in options, an entry file, and gives you a JavaScript file including all JavaScript files back. 
+- Every time you run a react native project, a compilation of many javascript files are done into a single file. 
+- This compilation is done by a bundler which is called Metro.
+
 ## Integration with Existing App [Click here](https://reactnative.dev/docs/integration-with-existing-apps)
 
 - Set up directory structure
@@ -85,34 +117,6 @@
   - npx react-native init YourProjectName --template react-native-template-typescript
 
 # [Running On Device](https://reactnative.dev/docs/running-on-device)
-
-# Android
-
-```
-export ANDROID_HOME=$HOME/Library/Android/sdk
-export PATH=$PATH:$ANDROID_HOME/emulator
-export PATH=$PATH:$ANDROID_HOME/platform-tools
-export JAVA_HOME=<Your Android Studio path here>/jre
-```
-
-- npx react-native run-android
-
-## Error
-
-```
-/Users/sibaprasad/.zprofile:3: /Library/Java/JavaVirtualMachines/jdk1.8.0_77.jdk/Contents/Home not found
-/Users/sibaprasad/.zshrc:3: /Library/Java/JavaVirtualMachines/jdk1.8.0_77.jdk/Contents/Home not found
-sibaprasad@sibaprasads-MBP ~ % /Users/sibaprasad/Workspace/ReactNative/ReactNativePlayground/project/HelloRn/node_modules/.bin/launchPackager.command ; exit;
-```
-
-## java.util.concurrent.ExecutionException: com.android.builder.testing.api.DeviceException: com.android.ddmlib.InstallException: EOF
-
-- Solution
-
-```
-
-```
-
 
 ## What is react Native
 <img src="https://github.com/siba-x-prasad/ReactNativePlayground/blob/main/readMe/images/WhatIsRn.png" width="700" height="400"/>  
