--- a/readMe/15.otherTipsAndTricks.md
+++ b/readMe/15.otherTipsAndTricks.md
@@ -1,1 +1,51 @@
 # Other Tips And Tricks in React Native
+
+## Common Libs
+
+- [React Native Elements](https://github.com/react-native-elements/react-native-elements)
+- [Native Base](https://nativebase.io/)
+- [React Navigation](https://reactnavigation.org/)
+- [React Native Lottie](https://github.com/lottie-react-native/lottie-react-native)
+- [React Native Paper - FOR material ICON](https://reactnativepaper.com/)
+- [Redux](https://www.geeksforgeeks.org/how-to-use-redux-with-reactnative/)
+- [Axios For N/W call](https://www.geeksforgeeks.org/axios-in-react-native/)
+- [Database]()
+- [Shared Preference - Async Storage]()
+
+```
+import AsyncStorage from '@react-native-async-storage/async-storage';
+
+ const KEY = 'USER_DATA'
+
+    let value = { name: yogi }
+
+    AsyncStorage.setItem(KEY, value);
+
+    AsyncStorage.getItem(KEY).then(asyncStorageRes => {
+        console.log(JSON.parse(asyncStorageRes))
+    });
+
+import EncryptedStorage from 'react-native-encrypted-storage';
+
+EncryptedStorage.setItem('key', 'value');
+EncryptedStorage.getItem('key');
+```
+
+## Useful Libs
+
+    1. Gluestack UI
+    2. Tamagui
+    3. React Native Reusables
+    4. Material Kit React Native
+    5. React Native Elements
+    6. Lottie for React Native
+    7. React Native Vector Icons
+    8. Ignite CLI
+    9. React Native Mapview
+    10. React Native Gifted Chat
+    11. React Native UI Kitten
+    12. React Native Paper
+    13. React Native Material Kit
+    14. React Native Material UI
+    15. RNUILIB
+    16. Shoutem
