--- a/readMe/16.CommonErrorsAndSolutions.md
+++ b/readMe/16.CommonErrorsAndSolutions.md
@@ -1,6 +1,33 @@
 # Common Error And solutions
+
 - [Best Practice Structure](https://www.linkedin.com/pulse/building-solid-structure-best-practices-react-native-samer-abdalla)
--
+
+# Android
+
+```
+export ANDROID_HOME=$HOME/Library/Android/sdk
+export PATH=$PATH:$ANDROID_HOME/emulator
+export PATH=$PATH:$ANDROID_HOME/platform-tools
+export JAVA_HOME=<Your Android Studio path here>/jre
+```
+
+- npx react-native run-android
+
+## Error
+
+```
+/Users/sibaprasad/.zprofile:3: /Library/Java/JavaVirtualMachines/jdk1.8.0_77.jdk/Contents/Home not found
+/Users/sibaprasad/.zshrc:3: /Library/Java/JavaVirtualMachines/jdk1.8.0_77.jdk/Contents/Home not found
+sibaprasad@sibaprasads-MBP ~ % /Users/sibaprasad/Workspace/ReactNative/ReactNativePlayground/project/HelloRn/node_modules/.bin/launchPackager.command ; exit;
+```
+
+## java.util.concurrent.ExecutionException: com.android.builder.testing.api.DeviceException: com.android.ddmlib.InstallException: EOF
+
+- Solution
+
+```
+
+```
 
 ## Setting Up the React Native Development Environment
 
@@ -76,25 +103,31 @@ Could not determine the dependencies of task ':app:compileDebugJavaWithJavac'.
 
 - npm instal
 - If ther are any error
+
 ```
-  npm install --legacy-peer-deps 
+  npm install --legacy-peer-deps
 ```
+
 - completely ignores all peerDependencies using the newest version without pinning on file package-lock.json
 
 ```
-npm install --force 
+npm install --force
 ```
+
 - forces the use of the newest, pinning all the versions on package-lock.json
 
 ## Error 1
+
 ```
 Starting: android
 node:internal/modules/cjs/loader:1147
   throw err;
 ```
+
 - npm cache clean --force
 
 ## Error 2
+
 ```
 Error: Cannot find module '/Users/sibaprasad/Workspace/rn/SpendUtility/android'
     at Module._resolveFilename (node:internal/modules/cjs/loader:1144:15)
@@ -105,9 +138,11 @@ Error: Cannot find module '/Users/sibaprasad/Workspace/rn/SpendUtility/android'
   requireStack: []
 }
 ```
+
 ## Error 3
+
 ```
-Android project not found. Are you sure this is a React Native project? 
+Android project not found. Are you sure this is a React Native project?
 
 /Users/sibaprasad/.zprofile:3: /Library/Java/JavaVirtualMachines/jdk1.8.0_77.jdk/Contents/Home not found
 /Users/sibaprasad/Workspace/rn/SpendUtility/node_modules/.generated/launchPackager.command ; exit;
@@ -125,3 +160,4 @@ info Starting dev server on port 8081...
 
 ## Unable to run simctl:
 - Error: xcrun simctl help exited with non-zero code: 72
+```
