Added Redux Example

--- a/readMe/15.TipsAndTricks.md
+++ b/readMe/15.TipsAndTricks.md
@@ -4,6 +4,7 @@
 
 - [React Native Elements](https://github.com/react-native-elements/react-native-elements)
 - [Native Base](https://nativebase.io/)
+- [React Ntive Paper](https://callstack.github.io/react-native-paper/)
 - [React Navigation](https://reactnavigation.org/)
 - [React Native Lottie](https://github.com/lottie-react-native/lottie-react-native)
 - [React Native Paper - FOR material ICON](https://reactnativepaper.com/)
