Updated read me file

--- a/readMe/15.TipsAndTricks.md
+++ b/readMe/15.TipsAndTricks.md
@@ -13,6 +13,13 @@
 - [Database]()
 - [Shared Preference - Async Storage]()
 
+## Navigation
+
+- npm install react-navigation/native
+- npm install react-navigation/native-stack
+- npm install @react-navigation/bottom-tabs
+- npm install @react-navigation/drawer
+
 ```
 import AsyncStorage from '@react-native-async-storage/async-storage';
 
