--- a/readMe/0.Commands.md
+++ b/readMe/0.Commands.md
@@ -52,3 +52,147 @@
 - watchman watch-del-all (If something don’t run as expected, maybe you need to clear and create a new bundle with this command.)
 - To Start Metro - npm start
 - To Run in IOS - npm run ios
+
+
+# Overview
+- React Native allows building cross-platform mobile applications for Android and iOS using JavaScript/TypeScript.
+- There are two main ways to create a React Native project:
+1) Expo (Recommended for most users)
+2) React Native CLI (Full native control)
+- This document explains both setups.
+## 2. Expo vs React Native CLI — Which Should You Choose?
+
+| Feature | Expo | React Native CLI |
+|--------|------|------------------|
+| Setup Difficulty | ⭐ Very Easy | ❗ Harder (requires native tools) |
+| Performance | Excellent for most apps | Best for native-heavy apps |
+| Native Modules | Limited (but improving) | Full access |
+| OTA Updates | ✔ Yes | ❌ No |
+| Build Tools Required | ❌ No Android Studio/Xcode required initially | ✔ Required |
+| Best For | Beginners, prototypes, most apps | Enterprise apps, custom native code |
+
+## ✔ Recommendation
+- Choose Expo unless you specifically need native modules that Expo does not support.
+- For most apps and developers → Expo is the best starting point.
+## 📦 3. Setting Up a Project With Expo
+- 3.1. Install Node.js
+- Download from: https://nodejs.org
+- Use the LTS version.
+- Verify installation:
+```
+node -v
+npm -v
+```
+## 3.2. Install Expo CLI
+- Verify:
+```
+npm install --global expo
+expo --version
+```
+## 3.3. Create a New Expo App
+- expo init MyExpoApp
+- Choose a template (e.g., Blank).
+- Navigate into the folder:
+- cd MyExpoApp
+## 3.4. Start the App
+- expo start
+- Expo DevTools will open in the browser.
+- Run on your device:
+- Install Expo Go app from Play Store / App Store
+- Scan the QR code
+- Run on Emulator:
+```
+expo run:android
+expo run:ios
+```
+## 3.5. Build App Bundles
+- Android APK:
+```
+expo build:android
+iOS IPA:
+expo build:ios
+```
+## ⚙️ 4. Setting Up a Project Using React Native CLI
+- React Native CLI provides full control over native Android/iOS code.
+## 4.1. Requirements
+- macOS
+- ✔ Node.js
+- ✔ Watchman
+- ✔ Xcode (for iOS)
+- ✔ Android Studio (for Android)
+## 4.2. Install Dependencies
+- Install React Native CLI
+```
+npm install -g react-native-cli
+node -v
+npm -v
+```
+- React Native uses npx, so no global installation required.
+- Check Node:
+```node -v```
+- Install Java (if required)
+- React Native currently recommends OpenJDK 17 (depending on RN version).
+- Install Android Studio
+- Download from: https://developer.android.com/studio
+- Install SDK & tools:
+- Android SDK
+- Android SDK Platform
+- Android Virtual Device (AVD)
+## Configure environment variables (Windows example)
+- Add to .bashrc / .zshrc / PowerShell profile:
+```
+export ANDROID_HOME=$HOME/Library/Android/sdk
+export PATH=$PATH:$ANDROID_HOME/emulator
+export PATH=$PATH:$ANDROID_HOME/platform-tools
+```
+## macOS / Linux
+- Add to ~/.zshrc or ~/.bashrc:
+```
+export ANDROID_HOME=$HOME/Library/Android/sdk
+export PATH=$PATH:$ANDROID_HOME/emulator
+export PATH=$PATH:$ANDROID_HOME/platform-tools
+```
+## 4.3. Create a New React Native App
+```npx react-native init MyRNApp```
+- Navigate:
+- cd MyRNApp
+## 4.4. Running the Project
+- Start Metro Bundler
+```npx react-native start```
+- Run on Android Device or Emulator
+```npx react-native run-android```
+- Run on iOS Simulator (macOS only)
+```npx react-native run-ios```
+## 4.5. Building a Release App
+- Android APK Release Build
+- cd android
+```./gradlew assembleRelease```
+- Generated APK path:
+- android/app/build/outputs/apk/release/app-release.apk
+- iOS Release Build (Mac only)
+- cd ios
+- xcodebuild -workspace MyRNApp.xcworkspace -scheme MyRNApp -configuration Release
+## 🧭 5. Folder Structure Overview
+- Common structure for both Expo and React Native CLI
+```
+project/
+│
+├── android/        # Native Android code (CLI only)
+├── ios/            # Native iOS code (CLI only)
+├── app/ or src/    # Your JS/TS source files
+│   ├── components/
+│   ├── screens/
+│   ├── navigation/
+│   ├── hooks/
+│   └── utils/
+│
+├── App.js
+├── package.json
+└── README.md
+```
+## 🎯 6. Which Setup Should You Use?
+- Question	Recommendation
+- Are you new to React Native?	Expo
+- Do you need fast development and simple builds?	Expo
+- Do you need custom native modules or heavy native code?	React Native CLI
+- Do you want the easiest workflow?	Expo
