Update Components link to archived documentation

--- a/readMe/4.Components.md
+++ b/readMe/4.Components.md
@@ -1,6 +1,6 @@
 # Component
 
-- [Components](https://reactnative.dev/docs/0.71/intro-react-native-components)
+- [Components](https://archive.reactnative.dev/docs/next/components-and-apis#basic-components)
 
 ## Hooks
 
