--- a/readMe/7.navigation.md
+++ b/readMe/7.navigation.md
@@ -3,8 +3,189 @@
 - https://reactnavigation.org/docs/hello-react-navigation/
 - [Official React Native Navigation](https://reactnative.dev/docs/navigation)
 - Installing Navigation Package
-- npm install @react-navigation/native
+```
+npm install @react-navigation/native
+```
+## Overview
+- Core idea: navigator containers hold navigators (Stack / Tab / Drawer). Screens are React components.
+- **Learn these in order:**
+1) Stack Navigator (push/pop) ✅
+2) Tab Navigator (bottom tabs) ✅
+3) Drawer Navigator (side menu) ✅
+4) Nested navigators (tabs inside stacks, etc.) ✅
+5) Passing params & callbacks ✅
+6) Deep linking / universal links ✅
+7) TypeScript typing for routes (if using TS) ✅
+8) Performance & navigation optimizations ✅
+## Install Dependencies
+- Core package
+```
+npm install @react-navigation/native
+```
+- Native dependencies
+```
+# For bare React Native (RN CLI)
+npm install react-native-screens react-native-safe-area-context
 
+# For gestures
+npm install react-native-gesture-handler
+```
+- Choose navigator types you need
+```
+npm install @react-navigation/native-stack         # for stack navigation (recommended)
+npm install @react-navigation/bottom-tabs         # tabs
+npm install @react-navigation/drawer              # drawer
+```
+- Animation
+```npm install react-native-reanimated```
+- If you install Reanimated, you must also add the Reanimated babel plugin in babel.config.js:
+```
+module.exports = {
+  presets: ['module:metro-react-native-babel-preset'],
+  plugins: [
+    'react-native-reanimated/plugin', // <--- put last
+  ],
+};
+
+```
+- For IOS application
+```
+npx pod-install ios
+```
+## Minimal working example (Stack + Tabs) — copy-paste ready
+```// App.js
+import * as React from 'react';
+import { Button, Text, View } from 'react-native';
+import { NavigationContainer } from '@react-navigation/native';
+import { createNativeStackNavigator } from '@react-navigation/native-stack';
+import { createBottomTabNavigator } from '@react-navigation/bottom-tabs';
+
+const Stack = createNativeStackNavigator();
+const Tab = createBottomTabNavigator();
+
+// Simple Home screen used inside tab
+function HomeScreen({ navigation }) {
+  return (
+    <View style={{flex:1,alignItems:'center',justifyContent:'center'}}>
+      <Text>Home Screen (Tab)</Text>
+      <Button
+        title="Go to Details (stack)"
+        onPress={() => navigation.navigate('Details', { itemId: 42, otherParam: 'hello' })}
+      />
+    </View>
+  );
+}
+
+function SettingsScreen({ navigation }) {
+  return (
+    <View style={{flex:1,alignItems:'center',justifyContent:'center'}}>
+      <Text>Settings Screen (Tab)</Text>
+      <Button title="Open Modal" onPress={() => navigation.navigate('Modal')} />
+    </View>
+  );
+}
+
+// Stack screen that receives params
+function DetailsScreen({ route, navigation }) {
+  const { itemId, otherParam } = route.params ?? {};
+  return (
+    <View style={{flex:1,alignItems:'center',justifyContent:'center'}}>
+      <Text>Details Screen</Text>
+      <Text>itemId: {String(itemId)}</Text>
+      <Text>otherParam: {String(otherParam)}</Text>
+      <Button title="Go back" onPress={() => navigation.goBack()} />
+    </View>
+  );
+}
+
+// A modal example screen
+function ModalScreen({ navigation }) {
+  return (
+    <View style={{flex:1,alignItems:'center',justifyContent:'center'}}>
+      <Text style={{fontSize:18}}>This is a Modal</Text>
+      <Button title="Close" onPress={() => navigation.goBack()} />
+    </View>
+  );
+}
+
+// Tabs navigator used as a screen in the stack
+function MainTabs() {
+  return (
+    <Tab.Navigator>
+      <Tab.Screen name="HomeTab" component={HomeScreen} options={{ title: 'Home' }} />
+      <Tab.Screen name="SettingsTab" component={SettingsScreen} options={{ title: 'Settings' }} />
+    </Tab.Navigator>
+  );
+}
+
+// Root stack
+export default function App() {
+  return (
+    <NavigationContainer>
+      <Stack.Navigator>
+        {/* Tabs live as a screen inside stack */}
+        <Stack.Screen name="Main" component={MainTabs} options={{ headerShown: false }} />
+        <Stack.Screen name="Details" component={DetailsScreen} />
+        {/* Present a modal */}
+        <Stack.Screen
+          name="Modal"
+          component={ModalScreen}
+          options={{ presentation: 'modal', headerShown: false }}
+        />
+      </Stack.Navigator>
+    </NavigationContainer>
+  );
+}
+```
+## 4. Core concepts & best practices (short)
+- NavigationContainer: wrap your whole app with it once (root).
+- Screen components get navigation and route props. Use navigation.navigate('RouteName', params) to push.
+- Stack vs Tabs vs Drawer: use stack for flows and deep back stack; tabs for lateral top-level destinations; drawer for admin/less-used screens.
+- Nested navigators: keep each navigator focused — e.g., Tab navigator as a screen inside a Root Stack. Use headerShown: false to avoid double headers.
+- Modal presentation: use presentation: 'modal' (native-stack) or screen options.
+- Avoid heavy logic in screens — use hooks or external services for state. Keep screens mostly UI.
+## 5. Passing params & reacting to updates
+- Navigate with params:
+```navigation.navigate('Details', { itemId: 86 })```
+- Read in screen:
+```const { itemId } = route.params;```
+- Update params:
+```navigation.setParams({ someParam: 'new' })```
+- Listen for focus / blur:
+```
+import { useFocusEffect } from '@react-navigation/native';
+useFocusEffect(
+  React.useCallback(() => {
+    // run when screen is focused
+    return () => { /* cleanup on blur */ };
+  }, [])
+);
+```
+## 7. TypeScript — strong typing for navigation (recommended)
+- Install types:
+```
+npm install -D @types/react
+npm install @react-navigation/native @react-navigation/native-stack
+```
+- Create a RootStackParamList:
+```
+// types.ts
+export type RootStackParamList = {
+  Main: undefined;
+  Details: { itemId: number; otherParam?: string };
+  Modal: undefined;
+};
+```
+- Use with native-stack:
+```
+import { NativeStackScreenProps } from '@react-navigation/native-stack';
+type Props = NativeStackScreenProps<RootStackParamList, 'Details'>;
+
+function DetailsScreen({ route, navigation }: Props) {
+  const { itemId } = route.params; // typed!
+}
+```
+- Type safety prevents navigation mistakes and is worth the extra setup on medium+ projects.
 ## Installing Stack Navigator
 
 - `npm install @react-navigation/stack`
